// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`setStatus workinstance 1`] = `
{
  "data": {
    "setStatus": {
      "__typename": "SetChecklistStatusPayload",
      "delta": 0,
      "edge": {
        "__typename": "ChecklistEdge",
        "node": {
          "__typename": "Checklist",
          "assignees": {
            "__typename": "AssigneeConnection",
            "edges": [
              {
                "__typename": "AssigneeEdge",
                "node": {
                  "__typename": "Assignee",
                  "assignedTo": {
                    "__typename": "Worker",
                    "displayName": "Will Ruggiano",
                  },
                },
              },
            ],
          },
          "status": {
            "__typename": "ChecklistOpen",
          },
        },
      },
    },
  },
}
`;

exports[`setStatus workresultinstance 1`] = `
{
  "data": {
    "setStatus": {
      "__typename": "SetChecklistItemStatusPayload",
      "delta": 0,
      "edge": {
        "__typename": "ChecklistItemEdge",
        "node": {
          "__typename": "ChecklistResult",
          "status": {
            "__typename": "ChecklistClosed",
          },
        },
      },
    },
  },
}
`;

exports[`setStatus invalid status change 1`] = `
{
  "data": null,
  "errors": [
    [GraphQLError: Invalid status change],
  ],
}
`;

exports[`setStatus entity cannot have its status changed 1`] = `
{
  "data": null,
  "errors": [
    [GraphQLError: Entity cannot have its status changed],
  ],
}
`;
